# sorcererdb-python

./: .gitignore  CHANGELOG.md  Pipfile  README.md  docker-compose.yml  gap.sh  init-test-db.sql  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: ci.yml
sorcererdb/: __init__.py  config.py  core.py  logging.py  spell.py
tests/: conftest.py  test_config.py  test_connection_management.py  test_crud_operations.py  test_logging.py  test_mysql_connection.py  test_spell.py
